test/ll_parser_input_test.test
START_OF_FILE: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^
INDENT_BEFORE_COMMENT: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^
COMMENT: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// Layered Languages Standard Lexical Analyzer Test Data
                                                        ^
INDENT_BEFORE_COMMENT: line #:
//
^
COMMENT: line #:
//
^^
LINE_BREAK: line #:
//
  ^
INDENT_BEFORE_COMMENT: line #:
// File:        ll_lexeme_standard_test.in
^
COMMENT: line #:
// File:        ll_lexeme_standard_test.in
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// File:        ll_lexeme_standard_test.in
                                          ^
INDENT_BEFORE_COMMENT: line #:
// Author:      Bob Walton (walton@acm.org)
^
COMMENT: line #:
// Author:      Bob Walton (walton@acm.org)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// Author:      Bob Walton (walton@acm.org)
                                           ^
INDENT_BEFORE_COMMENT: line #:
// Date:        Fri Dec  4 02:15:06 EST 2015
^
COMMENT: line #:
// Date:        Fri Dec  4 02:15:06 EST 2015
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// Date:        Fri Dec  4 02:15:06 EST 2015
                                            ^
INDENT_BEFORE_COMMENT: line #:
//
^
COMMENT: line #:
//
^^
LINE_BREAK: line #:
//
  ^
INDENT_BEFORE_COMMENT: line #:
// The authors have placed this data in the public
^
COMMENT: line #:
// The authors have placed this data in the public
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// The authors have placed this data in the public
                                                  ^
INDENT_BEFORE_COMMENT: line #:
// domain; they make no warranty and accept no liability
^
COMMENT: line #:
// domain; they make no warranty and accept no liability
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// domain; they make no warranty and accept no liability
                                                        ^
INDENT_BEFORE_COMMENT: line #:
// for this data.
^
COMMENT: line #:
// for this data.
^^^^^^^^^^^^^^^^^
LINE_BREAK: line #:
// for this data.
                 ^
LINE_BREAK: line ##:
<BLANK-LINE>
^
INDENT: line ##:
abc 3.4+z (x,y)
^
WORD: "abc": line ##:
abc 3.4+z (x,y)
^^^
NUMERIC: "3.4+z": line ##:
abc 3.4+z (x,y)
    ^^^^^
SEPARATOR: "(": line ##:
abc 3.4+z (x,y)
          ^
WORD: "x,y": line ##:
abc 3.4+z (x,y)
           ^^^
SEPARATOR: ")": line ##:
abc 3.4+z (x,y)
              ^
LINE_BREAK: line ##:
abc 3.4+z (x,y)
               ^
INDENT: line ##:
"hi" "ho<HT>x y<>z<LF>"
^
QUOTED_STRING: "hi": line ##:
"hi" "ho<HT>x y<>z<LF>"
^^^^
QUOTED_STRING: "ho␉x␣y<>z␊": line ##:
"hi" "ho<HT>x y<>z<LF>"
     ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"hi" "ho<HT>x y<>z<LF>"
                       ^
INDENT: line ##:
'tis noth'ng `but' a h'dache.
^
WORD: "'tis": line ##:
'tis noth'ng `but' a h'dache.
^^^^
WORD: "noth'ng": line ##:
'tis noth'ng `but' a h'dache.
     ^^^^^^^
SEPARATOR: "`": line ##:
'tis noth'ng `but' a h'dache.
             ^
WORD: "but": line ##:
'tis noth'ng `but' a h'dache.
              ^^^
SEPARATOR: "'": line ##:
'tis noth'ng `but' a h'dache.
                 ^
WORD: "a": line ##:
'tis noth'ng `but' a h'dache.
                   ^
WORD: "h'dache": line ##:
'tis noth'ng `but' a h'dache.
                     ^^^^^^^
SEPARATOR: ".": line ##:
'tis noth'ng `but' a h'dache.
                            ^
LINE_BREAK: line ##:
'tis noth'ng `but' a h'dache.
                             ^
INDENT: line ##:
a.1.2.3..b...c e5f x7+y6(5z)
^
WORD: "a.1.2.3..b...c": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
^^^^^^^^^^^^^^
WORD: "e5f": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
               ^^^
WORD: "x7+y6": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
                   ^^^^^
SEPARATOR: "(": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
                        ^
NUMERIC: "5z": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
                         ^^
SEPARATOR: ")": line ##:
a.1.2.3..b...c e5f x7+y6(5z)
                           ^
LINE_BREAK: line ##:
a.1.2.3..b...c e5f x7+y6(5z)
                            ^
INDENT: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
^
NUMERIC: "12.3": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
^^^^
NUMERIC: ".4": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
     ^^
NATURAL: "5": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
        ^
SEPARATOR: ".": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
         ^
NUMERIC: "6/7": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
           ^^^
NATURAL: "2": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
               ^
SEPARATOR: "|": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                ^
NATURAL: "3": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                 ^
SEPARATOR: "||": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                  ^^
NUMERIC: "4:5::6:A:B": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                    ^^^^^^^^^^
SEPARATOR: ":": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                              ^
LINE_BREAK: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                               ^
INDENT: line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^
NUMERIC: "1,23,456": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^^^^^^^^
NUMERIC: "1,234/6,789": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
         ^^^^^^^^^^^
NUMERIC: "1/2/3/4,5/6,7,8/9": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                     ^^^^^^^^^^^^^^^^^
NUMERIC: "8888.12,3,4": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                       ^^^^^^^^^^^
LINE_BREAK: line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                                  ^
INDENT: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
^
NUMERIC: "/3": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
^^
NUMERIC: "6.34.56/": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
   ^^^^^^^^
NATURAL: "3": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
            ^
SEPARATOR: ",": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
             ^
NATURAL: "4": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
               ^
SEPARATOR: ",": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                ^
NUMERIC: ",5": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                  ^^
NUMERIC: ",6.7,8.9": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                     ^^^^^^^^
NUMERIC: "'05": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                              ^^^
NUMERIC: "'1'2'3'4": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                  ^^^^^^^^
SEPARATOR: "'": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                          ^
LINE_BREAK: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                           ^
INDENT: line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
^
MARK: "+-*~@#$%^&=<>_!?./": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
^^^^^^^^^^^^^^^^^^
SEPARATOR: ":": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                  ^
QUOTED_STRING: "foo": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                   ^^^^^
WORD: "x<79><LF>": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                        ^^^^^^^^^
LINE_BREAK: line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                                 ^
INDENT: line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
^
WORD: ".foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
^^^^
WORD: "/foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
     ^^^^
WORD: "..foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
          ^^^^^
MARK: ".=": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                ^^
NUMERIC: "3/x": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                   ^^^
WORD: "x/3": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                       ^^^
NUMERIC: "3.x": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                           ^^^
WORD: "x.3//": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                               ^^^^^
WORD: "comment": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                     ^^^^^^^
NUMERIC: "<89>": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                             ^^^^
QUOTED_STRING: "'": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                  ^^
ERROR: string ended by line break or end of file; line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
LINE_BREAK: line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
INDENT: line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
^
WORD: "a": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
^
SEPARATOR: "(": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
 ^
WORD: "b,c": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
  ^^^
SEPARATOR: ")": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
     ^
WORD: "d": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
       ^
SEPARATOR: "{": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
        ^
WORD: "e;f": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
         ^^^
SEPARATOR: "}": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
            ^
WORD: "g": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
              ^
SEPARATOR: "[": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
               ^
WORD: "h,i": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                ^^^
SEPARATOR: "]": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                   ^
SEPARATOR: "`": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                     ^
SEPARATOR: "`": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                      ^
WORD: "foobar": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                       ^^^^^^
SEPARATOR: "'": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                             ^
WORD: "fum": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                               ^^^
SEPARATOR: "'": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                  ^
LINE_BREAK: line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                   ^
INDENT_BEFORE_COMMENT: line ##:
// form feed ␌
^
COMMENT: line ##:
// form feed ␌
^^^^^^^^^^^^^
LINE_BREAK: line ##:
// form feed ␌
             ^
INDENT_BEFORE_COMMENT: line ##:
// vertical tab ␋
^
COMMENT: line ##:
// vertical tab ␋
^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
// vertical tab ␋
                ^
INDENT_BEFORE_COMMENT: line ##:
// carriage return ␍
^
COMMENT: line ##:
// carriage return ␍
^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
// carriage return ␍
                   ^
INDENT: line ##:
z       x // horizontal tab
^
WORD: "z": line ##:
z       x // horizontal tab
^
WORD: "x": line ##:
z       x // horizontal tab
        ^
COMMENT: line ##:
z       x // horizontal tab
          ^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
z       x // horizontal tab
                           ^
INDENT: line ##:
all     ␌␋␍
^
WORD: "all": line ##:
all     ␌␋␍
^^^
LINE_BREAK: line ##:
all     ␌␋␍
        ^^^
INDENT: line ##:
control A␁B␂C␃
^
WORD: "control": line ##:
control A␁B␂C␃
^^^^^^^
WORD: "A": line ##:
control A␁B␂C␃
        ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
         ^
WORD: "B": line ##:
control A␁B␂C␃
          ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
           ^
WORD: "C": line ##:
control A␁B␂C␃
            ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
             ^
LINE_BREAK: line ##:
control A␁B␂C␃
              ^
INDENT: line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^
ERROR: in line ##: unrecognized escape sequence:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                            ^^^^
QUOTED_STRING: "<Q>␊␍␉␈␌␋␥␣â␁": line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                                             ^
INDENT: line ##:
"<0041><00000042>C D<00000045><0046>G"
^
QUOTED_STRING: "ABC␣DEFG": line ##:
"<0041><00000042>C D<00000045><0046>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<0041><00000042>C D<00000045><0046>G"
                                      ^
INDENT: line ##:
"<0041><000000B5>C D<000000E3><0006>G"
^
QUOTED_STRING: "AµC␣Dã␆G": line ##:
"<0041><000000B5>C D<000000E3><0006>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<0041><000000B5>C D<000000E3><0006>G"
                                      ^
INDENT: line ##:
"<0001>"
^
QUOTED_STRING: "␁": line ##:
"<0001>"
^^^^^^^^
LINE_BREAK: line ##:
"<0001>"
        ^
INDENT: line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^
QUOTED_STRING: "␀␁␂␃␄␅␆␇": line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
                                          ^
INDENT: line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^
QUOTED_STRING: "␈␉␊␊␋␌␍␎␏": line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
                                      ^
INDENT: line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^
QUOTED_STRING: "␐␑␒␓␔␕␖␗": line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
                                          ^
INDENT: line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
^
QUOTED_STRING: "␘␙␚␛␜␝␞␟␡": line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
                                           ^
INDENT: line ##:
"misplaced control ␁"
^
ERROR: in line ##: illegal control character sequence:
"misplaced control ␁"
                   ^
QUOTED_STRING: "misplaced␣control␣␁": line ##:
"misplaced control ␁"
^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
"misplaced control ␁"
                     ^
INDENT: line ##:
misplaced space ␌ here and ␍ here
^
WORD: "misplaced": line ##:
misplaced space ␌ here and ␍ here
^^^^^^^^^
WORD: "space": line ##:
misplaced space ␌ here and ␍ here
          ^^^^^
ERROR: vertical control character sequence with no line feed; line ##:
misplaced space ␌ here and ␍ here
                ^
WORD: "here": line ##:
misplaced space ␌ here and ␍ here
                  ^^^^
WORD: "and": line ##:
misplaced space ␌ here and ␍ here
                       ^^^
ERROR: vertical control character sequence with no line feed; line ##:
misplaced space ␌ here and ␍ here
                           ^
WORD: "here": line ##:
misplaced space ␌ here and ␍ here
                             ^^^^
LINE_BREAK: line ##:
misplaced space ␌ here and ␍ here
                                 ^
INDENT: line ##:
=<9=<8
^
NUMERIC: "=<9=<8": line ##:
=<9=<8
^^^^^^
LINE_BREAK: line ##:
=<9=<8
      ^
INDENT_BEFORE_COMMENT: line ##:
// blank line follows
^
COMMENT: line ##:
// blank line follows
^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
// blank line follows
                     ^
LINE_BREAK: line ##:
<BLANK-LINE>
^
INDENT_BEFORE_COMMENT: line ##:
// blank line with spaces follows
^
COMMENT: line ##:
// blank line with spaces follows
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line ##:
// blank line with spaces follows
                                 ^
LINE_BREAK: line ##:
<BLANK-LINE>
     ^
INDENT: line ##:
"premature end of line
^
QUOTED_STRING: "premature␣end␣of␣line": line ##:
"premature end of line
^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line ##:
"premature end of line
                      ^
LINE_BREAK: line ##:
"premature end of line
                      ^
INDENT: line ##:
"premature end of file<END-OF-FILE>
^
QUOTED_STRING: "premature␣end␣of␣file": line ##:
"premature end of file<END-OF-FILE>
^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line ##:
"premature end of file<END-OF-FILE>
                      ^
ERROR: end of file not preceeded by a line break; line ##:
"premature end of file<END-OF-FILE>
                      ^
END_OF_FILE: line ##:
"premature end of file<END-OF-FILE>
                      ^
